fix: make icons aligned

--- a/src/pages/Admin/components/Header.css
+++ b/src/pages/Admin/components/Header.css
@@ -20,6 +20,7 @@
 
 .header-right {
     display: flex;
+    align-items: center;
     gap: 10px;
 }
 
