--- a/src/pages/Admin/components/UserMenu.css
+++ b/src/pages/Admin/components/UserMenu.css
@@ -2,11 +2,11 @@
 .user-menu {
     position: relative;
     display: inline-block;
+    vertical-align: bottom;
 }
 
 .user-avatar {
     width: 40px;
-    height: 40px;
     border-radius: 50%;
     cursor: pointer;
 }
